// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    You are viewing 
    1
     
    expense
     expenses for a total of 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h1>
    You are viewing 
    23
     
    expenses
     expenses for a total of 
    $23.52
  </h1>
</div>
`;
